Use a bigger set of test data and fix resulting layout problems

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -34,7 +34,6 @@
 .app-main-sidebar {
   padding-top: $pt-grid-size;
   padding-bottom: $pt-grid-size;
-  display: flex;
   transition: all 0.3s;
   flex-basis: 300px;
   flex-shrink: 0;
