--- a/src/components/TypeTree.scss
+++ b/src/components/TypeTree.scss
@@ -13,7 +13,6 @@
  * limitations under the License.
  */
 .type-tree {
-  display: flex;
   flex-grow: 1;
 
   .bp3-tree-node, .bp3-tree-node-list {
